--- a/014_WEb/about.html
+++ b/014_WEb/about.html
@@ -10,7 +10,8 @@
 <body>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> |
+    <a href="Table.html">Table</a>
     <hr>
     <h1>About page</h1>
 
