--- a/014_WEb/contact.html
+++ b/014_WEb/contact.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- <style>
+        .tf {
+            width: 200px;
+            height: 30px;
+            border: 1px solid rgb(136, 34, 34);
+            border-radius: 5px;
+            background-color: bisque;
+            color: brown;
+            box-shadow: 2px 3px;
+        }
+    </style> -->
 </head>
 
 <body>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> |
+    <a href="Table.html">Table</a>
     <hr>
     <h1>Contact us page</h1>
     <hr>
@@ -22,16 +35,24 @@
         <fieldset>
             <legend>Reg form</legend>
             <label for="uname">Username</label>
-            <input type="text" id="uname" placeholder="Enter username" name="uname">
+            <input type="text" id="uname" placeholder="Enter username" name="uname" class="tf"><!-- style="width: 200px; 
+                    height: 30px; 
+                    border: 1px solid rgb(136, 34, 34);
+                    border-radius: 5px;
+                    background-color: bisque;
+                    color: brown;
+                    box-shadow: 2px 3px;
+                    " -->
+
             <br><br>
             <label for="email">Email</label>
-            <input type="text" id="email" placeholder="Enter email" name="email">
+            <input type="text" id="email" class="tf" placeholder="Enter email" name="email">
             <br><br>
             <label for="pass">Password</label>
-            <input type="password" id="pass" placeholder="enter password" name="pass">
+            <input type="password" id="pass" class="tf" placeholder="enter password" name="pass">
             <br><br>
             <label for="phone">Phone</label>
-            <input type="number" id="phone" name="phone">
+            <input type="number" id="phone" class="tf" name="phone">
             <br><br>
             <label for="">Gender</label>
             <input type="radio" name="gender" value="male" checked>Male
