--- a/014_WEb/index.html
+++ b/014_WEb/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 
-    <a href="index.html">Home</a> | 
+    <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> |
+    <a href="Table.html">Table</a>
     <hr>
     <u><i><b>Hello</b></i></u>
 
