--- a/014_WEb/erp.html
+++ b/014_WEb/erp.html
@@ -19,7 +19,42 @@
                 Student Registration & Accounting System
             </div>
         </header>
-        <div class="main"></div>
+        <div class="main">
+
+            <div class="login-form">
+                <h2 align="center">User Login</h2>
+                <hr>
+                <form action="">
+                    <table cellspacing="10">
+                        <tr>
+                            <td> <label for="uname">Username</label></td>
+                            <td><input type="text" id="uname" class="tf"></td>
+                        </tr>
+
+                        <tr>
+                            <td> <label for="pass">Password</label></td>
+                            <td><input type="password" id="pass" class="tf"></td>
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td> <input type="submit" class="btn">
+                                <input type="reset" class="btn">
+                            </td>
+
+                        </tr>
+                    </table>
+
+
+
+
+
+
+                </form>
+            </div>
+
+
+        </div>
         <footer>
             Copyright © 2025 TOPS International
         </footer>
